community/libreoffice: upgrade to 6.3.4.2

--- a/community/libreoffice/APKBUILD
+++ b/community/libreoffice/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Timo Teräs <timo.teras@iki.fi>
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=libreoffice
-pkgver=6.3.2.2
-pkgrel=4
+pkgver=6.3.4.2
+pkgrel=0
 pkgdesc="LibreOffice - Meta package for the full office suite"
 url="https://www.libreoffice.org/"
 arch="all !s390x"
@@ -135,7 +135,6 @@ source="https://download.documentfoundation.org/libreoffice/src/$_v/libreoffice-
 	disable-liborcus-unittest.patch
 	musl-stacksize.patch
 	musl-libintl.patch
-	fix-poppler-082.patch
 	"
 
 # secfixes:
@@ -431,9 +430,9 @@ sdk_doc() {
 	_split sdk_doc
 }
 
-sha512sums="f0576f5a5b2c91ee6c003cbf9772580c564e05f66c3b34ddee4b723095aaa3a55070df3d70d7e6b8be68e23a7e204c1237496d7e798f9494282cadba0eacf930  libreoffice-6.3.2.2.tar.xz
-8ac8c32053930d84ad158966ec0ae1569e607b73417b223ec533104f9c670982eb28e844fd0f8abfc9258d2fe3fb40ba8d4b577efc0d77a68dee029437963f60  libreoffice-dictionaries-6.3.2.2.tar.xz
-9560576dbf357c1059daf23240f827ed8f17051ab03c252f4bf2d7431549ae61665a9b46764b0f4a74756e8849fd6d2d451a9eff766d3f27e45d36b86c95c3b1  libreoffice-translations-6.3.2.2.tar.xz
+sha512sums="2ed687ae805da36635419729066a2924f1e38a6b0f8d2692c42b366450a261012adfcd8a5d7915d9cfd292d07519fc32c596cdb56d7be6b12a49618b18d6f3d2  libreoffice-6.3.4.2.tar.xz
+7e396d313122a30294b979c1d17799d3b9f8a6c5d40ed14d34283ab5cf96023d21aafd51a750298c4a859e77e57381f3523dda2f43c87c2ac9bb45aa3cf525c6  libreoffice-dictionaries-6.3.4.2.tar.xz
+5199df82139318e9c8d7cd3e41bb99177c5726f7571ce5acacd40b5fbe32ced7efb606897f794dd0f271483595cb0bfc50f8c2750638b15a4a97889a0791e51d  libreoffice-translations-6.3.4.2.tar.xz
 a231eba4a1baca11766ef292ab45e302081115477fe23018652882923308856835cf8c9ecba61a5cf22543474ccef3136965d794a90c9e4e9e6dcc21f9af6e1a  17410483b5b5f267aa18b7e00b65e6e0-hsqldb_1_8_0.zip
 9fe106bbdb55365f589246e5a0d10bbe9b35224132b66a1823dc6361633a67f2acc0e8c393dc7ed70d086858d16d242b8806b8b2184c98e3d20d0be85bed9c44  3404ab6b1792ae5f16bbd603bd1e1d03-libformula-1.1.7.zip
 4a48f1e32907fb2dee601cda3cd7a0d7198b2d51f2a572b647f1e93f901fd511eef3567676e52dfb1723a2cdfbc01f2015ca0bb22903b0bc1476dd618cc9aa8a  35c94d2df8893241173de1d16b6034c0-swingExSrc.zip
@@ -459,5 +458,4 @@ c2970c482b3d6557272fe07eda236613176662dd0b789a24dbbea17a33cb6aa55d981feb96a65029
 0591099d4e650601b180e80910cd0de9a904713087f189e4ceac96b9ec5654010c2b60fe17177c134f27acc02a753ad37c3b4866299585e1a9ae8667d895fe1a  fix-includes.patch
 83081b999cedb631122d59d77f74b60adf97e412de924306e35d8d7975e5f5d17694907166136cb865f30c51d8669b79e871d6e8450c8b0038e7d6cdee5cdc02  disable-liborcus-unittest.patch
 9abb0b14b7c408705569f26f6ed6519630ee7b98ff9c959eb53bb5efec6c08cae906f3c82943aee21098ab09c6caf58443a0dbe347d7dc5c8b6637f3665abca2  musl-stacksize.patch
-d99d074e89e2713a3b6a56fa60d9d989ca6eefc8884ccbf88cb16c7b09da6dde4ba4ebc6a4d8408b61a08088df7cb1bcda60738f91e5569179fc45d7e9b901a3  musl-libintl.patch
-3552e652f4fa3b1760f7c364769f4ff4da2c8fc2a05f592b3c0f2fb19e39215781d1b66f1f3240c9ddae8bdf7d09c2cbfe6e8c1e63faed293a98dd0403eea3db  fix-poppler-082.patch"
+d99d074e89e2713a3b6a56fa60d9d989ca6eefc8884ccbf88cb16c7b09da6dde4ba4ebc6a4d8408b61a08088df7cb1bcda60738f91e5569179fc45d7e9b901a3  musl-libintl.patch"
