depend on py3-cairo-dev instead of py-cairo-dev

--- a/main/py3-gobject3/APKBUILD
+++ b/main/py3-gobject3/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="Python bindings for the GObject library"
 url="https://wiki.gnome.org/Projects/PyGObject/"
 arch="all"
 license="LGPL-2.1-or-later"
-makedepends="python3-dev py-cairo-dev gobject-introspection-dev
+makedepends="python3-dev py3-cairo-dev gobject-introspection-dev
 	libffi-dev glib-dev meson"
 checkdepends="py3-pytest gtk+3.0-dev xvfb-run"
 options="!check" # xvfb-run is in community/ still
