--- a/community/gnome-music/APKBUILD
+++ b/community/gnome-music/APKBUILD
@@ -11,7 +11,7 @@ depends="grilo grilo-plugins gnome-online-accounts libdazzle libsoup py3-gobject
 	tracker libmediaart py3-cairo gst-plugins-good"
 makedepends="meson gnome-online-accounts-dev libdazzle-dev gtk+3.0-dev libsoup-dev
 	gobject-introspection-dev grilo-dev grilo-plugins-dev tracker-dev py3-gobject3-dev
-	libmediaart-dev py-cairo-dev itstool"
+	libmediaart-dev py3-cairo-dev itstool"
 checkdepends="desktop-file-utils appstream-glib"
 options="!check" # appstream metadata test fails
 subpackages="$pkgname-lang $pkgname-doc $pkgname-dbg"
