main/py3-dbus: drop py2- package

--- a/main/py3-dbus/APKBUILD
+++ b/main/py3-dbus/APKBUILD
@@ -1,36 +1,28 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
-pkgname=py-dbus
+pkgname=py3-dbus
 _pkgname=dbus-python
 pkgver=1.2.16
-pkgrel=0
-pkgdesc="Python bindings for DBUS"
+pkgrel=1
+pkgdesc="Python3 bindings for DBUS"
 url="http://www.freedesktop.org/wiki/Software/DBusBindings"
 arch="all"
 license="MIT"
-depends_dev="py-dbus"
-makedepends="dbus-glib-dev python2-dev python3-dev py3-sphinx"
+depends="python3"
+depends_dev="py3-dbus"
+makedepends="dbus-glib-dev python3-dev py3-sphinx"
 checkdepends="bash dbus py3-gobject3 py3-tappy"
-subpackages="$pkgname-dev $pkgname-doc py2-dbus:_py2 py3-dbus:_py3"
+subpackages="$pkgname-dev $pkgname-doc"
 source="https://dbus.freedesktop.org/releases/dbus-python/$_pkgname-$pkgver.tar.gz"
 
 builddir="$srcdir/$_pkgname-$pkgver"
 
-prepare() {
-	mkdir ../build-python2
-	mkdir ../build-python3
-	default_prepare
-}
+replaces="py-dbus" # Backwards compatibility
+provides="py-dbus=$pkgver-r$pkgrel" # Backwards compatibility
+
 
 build() {
-	cd ../build-python2
-	"$builddir/configure" \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr
-	make
-	cd ../build-python3
-	"$builddir/configure" \
+	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
@@ -40,33 +32,11 @@ build() {
 }
 
 check() {
-	cd "../build-python3"
 	make check
 }
 
 package() {
-	cd "../build-python2"
 	make DESTDIR="$pkgdir" install
-	cd "../build-python3"
-	make DESTDIR="$pkgdir" install
-}
-
-_py2() {
-	replaces="py-dbus"
-	_py python2
-}
-
-_py3() {
-	_py python3
-}
-
-_py() {
-	local python="$1"
-	pkgdesc="$pkgdesc (for $python)"
-	depends="$depends $python"
-	install_if="$pkgname=$pkgver-r$pkgrel $python"
-	mkdir -p "$subpkgdir"/usr/lib
-	mv "$pkgdir"/usr/lib/$python* "$subpkgdir"/usr/lib/
 }
 
 sha512sums="e76c00c5fd3fe6884e4c24f258987fd3b80d21bd4e0f96aa8fda152078a860b62321324f6efcbfe7226d5ab2521a14b5bda7cf2468d2cae5f376c124a71aa05c  dbus-python-1.2.16.tar.gz"
