depend on py3-dbus-dev instead of py-dbus-dev

--- a/community/py3-qt5/APKBUILD
+++ b/community/py3-qt5/APKBUILD
@@ -9,7 +9,7 @@ url="http://riverbankcomputing.co.uk/software/pyqt/intro"
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 license="GPL-2.0-or-later"
 depends="python3 py3-sip-pyqt5"
-makedepends="python3-dev py-dbus-dev py-sip-dev
+makedepends="python3-dev py3-dbus-dev py-sip-dev
 	qt5-qtbase-dev libx11-dev qt5-qtsvg-dev qt5-qtwebsockets-dev
 	py3-opengl qt5-qtconnectivity-dev qt5-qtmultimedia-dev qt5-qttools-dev
 	qt5-qtserialport-dev qt5-qtx11extras-dev qt5-qtdeclarative-dev
