--- a/main/avahi-ui/APKBUILD
+++ b/main/avahi-ui/APKBUILD
@@ -7,7 +7,7 @@ url="http://www.avahi.org/"
 arch="all"
 license="LGPL-2.0-or-later"
 depends_dev="gdbm-dev"
-makedepends="$depends_dev py3-gobject3-dev py-dbus-dev intltool
+makedepends="$depends_dev py3-gobject3-dev py3-dbus-dev intltool
 	gobject-introspection-dev expat-dev libdaemon-dev glib-dev dbus-dev
 	libcap-dev python3-dev autoconf automake libtool avahi-dev gtk+3.0-dev"
 subpackages="$pkgname-dev $pkgname-tools $pkgname-gtk3"
