--- a/community/gedit-plugins/APKBUILD
+++ b/community/gedit-plugins/APKBUILD
@@ -9,7 +9,7 @@ arch="all !s390x" # Limited by gedit-dev and gtksourceview4-dev
 license="GPL-2.0-only"
 depends="python3 py3-gobject3 vte3 gucharmap py3-dbus libpeas-python3"
 makedepends="glib-dev gtk+3.0-dev gtksourceview4-dev libpeas-dev gedit-dev vala
-	libgit2-glib-dev itstool vte3-dev gucharmap-dev py-dbus-dev meson"
+	libgit2-glib-dev itstool vte3-dev gucharmap-dev py3-dbus-dev meson"
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/gedit-plugins/${pkgver%.*}/gedit-plugins-$pkgver.tar.xz"
 
