testing/podman: add shell completion subpackages

--- a/testing/podman/APKBUILD
+++ b/testing/podman/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Michał Polański <michal@polanski.me>
 pkgname=podman
 pkgver=1.7.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Simple management tool for pods, containers, and images"
 url="https://podman.io/"
 options="!check" # TODO: enable tests
@@ -10,7 +10,9 @@ arch="all"
 license="Apache-2.0"
 depends="conmon cni-plugins"
 makedepends="go gpgme-dev libseccomp-dev libassuan-dev go-md2man btrfs-progs-dev bash"
-subpackages="$pkgname-doc"
+subpackages="$pkgname-doc
+	$pkgname-bash-completion:bashcomp:noarch
+	$pkgname-zsh-completion:zshcomp:noarch"
 source="$pkgname-$pkgver.tar.gz::https://github.com/containers/libpod/archive/v$pkgver.tar.gz
 	libpod-config.patch"
 builddir="$srcdir/libpod-$pkgver"
@@ -24,6 +26,24 @@ package() {
 	unset LDFLAGS
 	make install.bin install.man install.cni install.config \
 		PREFIX=/usr DESTDIR="$pkgdir"
+}
+
+bashcomp() {
+	pkgdesc="Bash completions for $pkgname"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+
+	install -Dm644 "$builddir"/completions/bash/$pkgname \
+		"$subpkgdir"/usr/share/bash-completion/completions/$pkgname
+}
+
+zshcomp() {
+	pkgdesc="Zsh completions for $pkgname"
+	depends=""
+	install_if="$pkgname=$pkgver-r$pkgrel zsh"
+
+	install -Dm644 "$builddir"/completions/zsh/_$pkgname \
+		"$subpkgdir"/usr/share/zsh/site-functions/_$pkgname
 }
 
 sha512sums="986ec7123127d3ffb26cecc39a2ae3d8a6dd3d147327449fc4e9d17f6e6606bde278f13920d0aef59410262801251e7b4cfe099cb5caafe9773533e8476848fe  podman-1.7.0.tar.gz
