main/openssl: enable tests on s390x, modernize

--- a/main/openssl/APKBUILD
+++ b/main/openssl/APKBUILD
@@ -2,9 +2,9 @@
 pkgname=openssl
 pkgver=1.1.1d
 _abiver=${pkgver%.*}
-pkgrel=3
+pkgrel=4
 pkgdesc="Toolkit for Transport Layer Security (TLS)"
-url="https://www.openssl.org"
+url="https://www.openssl.org/"
 arch="all"
 license="OpenSSL"
 replaces="libressl"
@@ -17,9 +17,6 @@ source="https://www.openssl.org/source/openssl-$pkgver.tar.gz
 	man-section.patch
 	CVE-2019-1551.patch
 	"
-case "$CARCH" in
-s390x) options="$options !check";; # FIXME: test hangs
-esac
 
 
 # secfixes:
@@ -37,7 +34,6 @@ esac
 
 build() {
 	local _target _optflags
-	cd "$builddir"
 
 	# openssl will prepend crosscompile always core CC et al
 	CC=${CC#${CROSS_COMPILE}}
@@ -46,16 +42,16 @@ build() {
 
 	# determine target OS for openssl
 	case "$CARCH" in
-	aarch64*) _target="linux-aarch64" ;;
-	arm*)   _target="linux-armv4" ;;
-	mips64*) _target="linux64-mips64" ;;
-	# explicit _optflags is needed to prevent automatic -mips3 addition
-	mips*) _target="linux-mips32"; _optflags="-mips32" ;;
-	ppc64le) _target="linux-ppc64le" ;;
-	x86)    _target="linux-elf" ;;
-	x86_64) _target="linux-x86_64"; _optflags="enable-ec_nistp_64_gcc_128" ;;
-	s390x)	_target="linux64-s390x";;
-	*)	msg "Unable to determine architecture from (CARCH=$CARCH)" ; return 1 ;;
+		aarch64*)	_target="linux-aarch64" ;;
+		arm*)		_target="linux-armv4" ;;
+		mips64*)	_target="linux64-mips64" ;;
+		# explicit _optflags is needed to prevent automatic -mips3 addition
+		mips*)		_target="linux-mips32"; _optflags="-mips32" ;;
+		ppc64le)	_target="linux-ppc64le" ;;
+		x86)		_target="linux-elf" ;;
+		x86_64)		_target="linux-x86_64"; _optflags="enable-ec_nistp_64_gcc_128" ;;
+		s390x) 		_target="linux64-s390x";;
+		*)		msg "Unable to determine architecture from (CARCH=$CARCH)" ; return 1 ;;
 	esac
 
 	# Configure assumes --options are for it, so can't use
@@ -74,12 +70,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	# remove the script c_rehash
 	rm "$pkgdir"/usr/bin/c_rehash
