community/openjdk10: update source url to https

--- a/community/openjdk10/APKBUILD
+++ b/community/openjdk10/APKBUILD
@@ -41,7 +41,7 @@ $pkgname-jre:_jre
 $pkgname-src:_src:noarch
 $pkgname-jre-headless:_jre_headless
 $pkgname-jdk:_jdk"
-source="jdk-$_pkgver.tar.bz2::http://hg.openjdk.java.net/jdk-updates/jdk10u/archive/jdk-$_pkgver.tar.bz2
+source="jdk-$_pkgver.tar.bz2::https://hg.openjdk.java.net/jdk-updates/jdk10u/archive/jdk-$_pkgver.tar.bz2
 
 2019-01-05_config.sub::https://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;h=3b4c7624b68d2d7f84618e1b5fa2badd43a48325;hb=286a38db91ea2dce1749ab7d1d9ea5ae344a16c1
 build.patch
