main/xen: SPDX license

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=1
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
 arch="x86_64 armhf aarch64" # enable armv7 when builds with gcc8
-license="GPL"
+license="GPL-2.0-only"
 depends="bash iproute2 logrotate"
 depends_dev="openssl-dev python3-dev e2fsprogs-dev gettext zlib-dev ncurses-dev
 	dev86 texinfo perl pciutils-dev glib-dev yajl-dev libnl3-dev
@@ -195,7 +195,7 @@ _TPMEMU_VERSION="0.7.4"
 # grep ^IPXE_GIT_TAG tools/firmware/etherboot/Makefile
 _IPXE_GIT_TAG=1dd56dbd11082fb622c2ed21cfaced4f47d798a6
 
-source="https://downloads.xenproject.org/release/$pkgname/$pkgver/$pkgname-$pkgver.tar.gz
+source="https://downloads.xenproject.org/release/xen/$pkgver/$pkgname-$pkgver.tar.gz
 	https://xenbits.xen.org/xen-extfiles/gmp-$_GMP_VERSION.tar.bz2
 	https://xenbits.xen.org/xen-extfiles/grub-$_GRUB_VERSION.tar.gz
 	https://xenbits.xen.org/xen-extfiles/lwip-$_LWIP_VERSION.tar.gz
@@ -395,12 +395,12 @@ package() {
 	install -m755 xen-fd-is-file "$pkgdir"/usr/lib/xen/bin/xen-fd-is-file
 
 	# we need to exclude /usr/share when stripping
-        msg "Stripping binaries"
+	msg "Stripping binaries"
 	scanelf --recursive --nobanner --etype "ET_DYN,ET_EXEC" "$pkgdir"/usr/lib \
 		"$pkgdir"/usr/bin \
 		"$pkgdir"/usr/sbin \
-                | sed -e 's:^ET_DYN ::' -e 's:^ET_EXEC ::' \
-                | xargs strip
+		| sed -e 's:^ET_DYN ::' -e 's:^ET_EXEC ::' \
+		| xargs strip
 }
 
 check() {
