--- a/community/openjdk11/APKBUILD
+++ b/community/openjdk11/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Simon Frankenberger <simon-alpine@fraho.eu>
 # Maintainer: Simon Frankenberger <simon-alpine@fraho.eu>
 pkgname=openjdk11
-pkgver=11.0.5_p10
+pkgver=11.0.6_p10
 _pkgver=${pkgver/_p/+}
 pkgrel=0
 pkgdesc="Oracle OpenJDK 11"
@@ -42,7 +42,7 @@ $pkgname-jre:_jre
 $pkgname-src:_src:noarch
 $pkgname-jre-headless:_jre_headless
 $pkgname-jdk:_jdk"
-source="jdk-$_pkgver.tar.bz2::http://hg.openjdk.java.net/jdk-updates/jdk11u/archive/jdk-$_pkgver.tar.bz2
+source="jdk-$_pkgver.tar.bz2::https://hg.openjdk.java.net/jdk-updates/jdk11u/archive/jdk-$_pkgver.tar.bz2
 
 build.patch
 aarch64.patch
@@ -70,6 +70,15 @@ if [ $_run_jtreg -ne 0 ]; then
 	checkdepends="$checkdepends ttf-freefont xvfb"
 fi
 
+# secfixes:
+#   11.0.6_p10-r0:
+#     - CVE-2020-2583
+#     - CVE-2020-2590
+#     - CVE-2020-2593
+#     - CVE-2020-2601
+#     - CVE-2020-2604
+#     - CVE-2020-2654
+#     - CVE-2020-2655
 
 prepare() {
 	default_prepare
@@ -307,11 +316,11 @@ _jdk() {
 	mv "$_fromroot/include" "$_toroot"
 }
 
-sha512sums="0d52c78e217b79756be0fc6b3f9204bae254ec7b9ae10b6c3114463a9c028143807f4422711f0c02b81a034ae6e88fa2efc6bed85022720807344230a8aa12a6  jdk-11.0.5+10.tar.bz2
+sha512sums="2c17182d3dd16dcf9ab527ce84ad1737946c80259ac227f9eddf385444471a78b3b112ba58cce0e30818bb35fcfdbb1436e063aac1af69e7b68a83540a31cebf  jdk-11.0.6+10.tar.bz2
 66a9f2736da87de09d7bcc136771ab760bdba7847f3a23b2aa4efbc2e55ac8b49510c6d7afdf3f8d046c6e3fe9dca0d4cb0b5a38d7a3aebaf86fa0e3cc635eac  build.patch
 8c0f1f8d2a78ebb30a8460bc0ea9cd2349cea98819df1577bf7de19a1dd82d06a593f36b4e17c282ed53d23f00163e387e3dd1f3c9e5a092726e78c3aa710370  aarch64.patch
 d2903a5b3b9f82c4888416580f0b93888bf21ae0dac0ce6e926607a82a9e53b7e10e13f07a984f65dc116e81f58cd3844d6156088534c0059be8f6ee68e19a43  arm.patch
-4eb577645e7b6d4563290480e162702030033515ff4845edbd1dbf2604b6f1e7d2a3cdd85058d6b41938b54c097635125c4429b9df3fcda589b980aa1740fd2e  ppc64le.patch
+592bf6c1be99879735f0b2484d7d286be049170f5fb7de8526b452cde732e97f2b9b5b0af0073ec0a525bd52ce9f207a7dcace9d9d83a950eee38b11d6f5ad8d  ppc64le.patch
 89e681da2de0bcb5131e2512d1280ce8da684ede5b38379c6325cd9f57e78a4bdde3abfa0a0a496889411dd57264312094973ce2da301293d0826114a3ef09d3  x86.patch
 d1767dddd8e0956e25c0f77ed45c6fc86a1191bae1704a6dc33be490fd20eaa50461fe5c2a3349512059d555651e2eb41437dd3c1096c351e8ee68b4534a2579  HelloWorld.java
 27e91edef89d26c0c5b9a813e2045f8d2b348745a506ae37b34b660fa7093da9a4e0e676ea41dc4a5c901bce02e5304d95e90f68d6c99cbf461b2da40a7a9853  TestECDSA.java
