testing/firefox: fix linter warnings
Also fix the install location for icons, apparently we used the _png
variable in a loop when we only declared png

--- a/testing/firefox/APKBUILD
+++ b/testing/firefox/APKBUILD
@@ -69,7 +69,6 @@ source="https://ftp.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-$pkg
 	firefox.desktop
 	firefox-safe.desktop"
 
-builddir="${srcdir}/firefox-$pkgver"
 _mozappdir=/usr/lib/firefox
 
 # help our shared-object scanner to find the libs
@@ -134,7 +133,7 @@ build() {
 	export RUST_TARGET_PATH="$builddir/rust_targets"
 
 	# set rpath so linker finds the libs
-	export LDFLAGS="$LDFLAGS -Wl,-rpath,${_mozappdir}"
+	export LDFLAGS="$LDFLAGS -Wl,-rpath,$_mozappdir"
 
 	case "$CARCH" in
 		x86)
@@ -224,30 +223,20 @@ package() {
 		DESTDIR="$pkgdir" \
 		MOZ_MAKE_FLAGS="$MAKEOPTS"
 
-	install -m755 -d ${pkgdir}/usr/share/applications
-	install -m755 -d ${pkgdir}/usr/share/pixmaps
+	install -m755 -d "$pkgdir"/usr/share/applications
+	install -m755 -d "$pkgdir"/usr/share/pixmaps
 
-	local png
-	for png in ../browser/branding/official/default*.png; do
+	local _png
+	for _png in ../browser/branding/official/default*.png; do
 		local i=${_png%.png}
 		i=${i##*/default}
-		install -D -m644 "$png" "$pkgdir"/usr/share/icons/hicolor/${i}x${i}/apps/firefox.png
+		install -D -m644 "$_png" "$pkgdir"/usr/share/icons/hicolor/"$i"x"$i"/apps/firefox.png
 	done
 
 	install -m644 "$builddir"/browser/branding/official/default48.png \
-		${pkgdir}/usr/share/pixmaps/firefox.png
-	install -m644 ${srcdir}/firefox.desktop ${pkgdir}/usr/share/applications/firefox.desktop
-	install -m644 ${srcdir}/firefox-safe.desktop ${pkgdir}/usr/share/applications/firefox-safe.desktop
-
-	# launcher as symlink is broken from firefox-7.0
-	rm "$pkgdir"/usr/bin/firefox
-	libgl=$(scanelf -qF '#F%S' /usr/lib/libGL.so)
-	cat > "$pkgdir"/usr/bin/firefox << __EOF__
-#!/bin/sh
-
-exec $_mozappdir/firefox "\$@"
-__EOF__
-	chmod 755 "$pkgdir"/usr/bin/firefox
+		"$pkgdir"/usr/share/pixmaps/firefox.png
+	install -m644 "$srcdir"/firefox.desktop "$pkgdir"/usr/share/applications/firefox.desktop
+	install -m644 "$srcdir"/firefox-safe.desktop "$pkgdir"/usr/share/applications/firefox-safe.desktop
 
 	# install our vendor prefs
 	install -d "$pkgdir"/$_mozappdir/browser/defaults/preferences
@@ -263,11 +252,6 @@ __EOF__
 	pref("extensions.autoDisableScopes", 11);
 	pref("extensions.shownSelectionUI", true);
 	EOF
-
-	# remove copied, huge, libraries
-	rm -f "$pkgdir"/${_mozappdirdev}/sdk/lib/libmozjs.so
-	rm -f "$pkgdir"/${_mozappdirdev}/sdk/lib/libmozalloc.so
-	rm -f "$pkgdir"/${_mozappdirdev}/sdk/lib/libxul.so
 }
 
 sha512sums="4d8c832709b8831234b571b2f809d1601490db47982ff1d71913062c42c17a7f3340c72b6162b74a248a9cfe7b5d1646fb9a0463dcbcfaed32e1346ee20e4147  firefox-72.0.2.source.tar.xz
