--- a/community/gparted/APKBUILD
+++ b/community/gparted/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gparted
-pkgver=1.0.0
-pkgrel=1
+pkgver=1.1.0
+pkgrel=0
 pkgdesc="a graphical partition editor for creating, reorganizing, and deleting disk partitions"
 options="!check" # Requires eudev
 url="http://gparted.sourceforge.net/"
@@ -22,8 +22,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		--disable-doc \
-		--disable-scrollkeeper
+		--disable-doc
 	make
 }
 
@@ -31,5 +30,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="88eef4e4fbd51d9a9a3bdfb0a9738f6957ec5cbc21c2f93febf0d4cfe927e0ae3cb8cb1a9b2ca956a55dc62b9228ec76107e3e4701623be6474c99678c9197be  gparted-1.0.0.tar.gz
+sha512sums="afaad690fccbec7385b078a299b78bf4f0f83999e2661f89cb97f9e8f2b30ee41f0535450075e3a7174967e77c75024df78863d0d90d5e8dc726a487b4ae0bae  gparted-1.1.0.tar.gz
 565f65440fed9d603aaff4e08d4c319c62e61bb064f9edc5934f671b3a63df02aa505200c0224038db64a4275352a30913755a4ad030e71e7b5c372a9316c278  gparted.in-Use-reliable-way-of-detecting-gpartedbin-.patch"
