main/bacula: Fix dependency for building standalone
The build process requires in the lastest steps a user called `postgres`
which could be added by postgresql package.

Fixing an error of the usage of variable pkggroups.

Signed-off-by: Gustavo L F Walbon <gwalbon@linux.ibm.com>
Signed-off-by: Mike Sullivan <mksully22@gmail.com>

--- a/main/bacula/APKBUILD
+++ b/main/bacula/APKBUILD
@@ -2,14 +2,13 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=bacula
 pkgver=9.4.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Enterprise ready, network based backup program"
-url="http://www.bacula.org"
+url="https://www.bacula.org"
 arch="all"
-license="AGPL-3.0"
-depends=""
+license="AGPL-3.0-or-later"
 makedepends="autoconf mariadb-connector-c-dev ncurses-dev openssl-dev postgresql-dev
-	sqlite-dev zlib-dev lzo-dev acl-dev"
+	sqlite-dev zlib-dev lzo-dev acl-dev postgresql"
 install="$pkgname.pre-install $pkgname.post-upgrade"
 subpackages="$pkgname-doc $pkgname-mysql $pkgname-pgsql $pkgname-sqlite
 	$pkgname-client $pkgname-libs"
@@ -62,7 +61,7 @@ build() {
 		--with-dir-group=$pkgname \
 		--with-archivedir=$_bworkdir/archive \
 		--with-sd-user=$pkgusers \
-		--with-sd-group=$pkggroup \
+		--with-sd-group=$pkggroups \
 		--with-fd-user=root \
 		--with-fd-group=root \
 		--with-sbin-perm=0755
