main/perl-dbd-pg: upgrade to 3.10.3

--- a/main/perl-dbd-pg/APKBUILD
+++ b/main/perl-dbd-pg/APKBUILD
@@ -3,14 +3,13 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-dbd-pg
 _pkgreal=DBD-Pg
-pkgver=3.10.2
+pkgver=3.10.3
 pkgrel=0
 pkgdesc="DBI PostgreSQL interface"
 url="https://metacpan.org/release/DBD-Pg"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-dbi"
-depends="$cpandepends"
+depends="perl perl-dbi"
 makedepends="perl-dev postgresql-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/T/TU/TURNSTEP/DBD-Pg-$pkgver.tar.gz"
@@ -38,4 +37,4 @@ check() {
 	make test
 }
 
-sha512sums="76763b36f9daefcf86392dfba0fd38eb88cc7b45f1694e6b8772ed579e2fa962cadbfb9347949b0b15c0547061c002586a759ef1fdd9cd1fefbadbb00b2a69e2  DBD-Pg-3.10.2.tar.gz"
+sha512sums="8e951ddf41dc2cd4c10c1e4b874df85aca2eb15617618f432f61758774f82bf5acfca7e7d3f1198e55f532341cd5657a954ae8f789a31439aa37ff9d93e0e1b8  DBD-Pg-3.10.3.tar.gz"
