main/libasr: upgrade to 1.0.4

--- a/main/libasr/APKBUILD
+++ b/main/libasr/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: ScrumpyJack <scrumpyjack@st.ilet.to>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libasr
-pkgver=1.0.3
+pkgver=1.0.4
 pkgrel=0
 pkgdesc="libasr is a free, simple and portable asynchronous resolver library"
 url="https://www.opensmtpd.org"
@@ -9,10 +9,9 @@ arch="all"
 license="ISC"
 makedepends="mdocml bison openssl-dev automake autoconf libtool libbsd-dev"
 subpackages="$pkgname-dbg $pkgname-static $pkgname-dev"
-source="https://github.com/OpenSMTPD/libasr/archive/$pkgver/$pkgname-$pkgver.tar.gz
+source="https://github.com/OpenSMTPD/libasr/archive/$pkgver/libasr-$pkgver.tar.gz
 	0002-Replace-missing-res_randomid-with-the-more-secure-ar.patch
 	"
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	default_prepare
@@ -28,12 +27,8 @@ build() {
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
-		--with-pie \
-		--with-Werror \
 		--prefix=/usr \
-		--mandir=/usr/share/man \
-		--with-mantype=man \
-		--without-Werror
+		--mandir=/usr/share/man
 	make
 }
 
@@ -41,5 +36,5 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="51b21a0494f154514d702b4e1076dd25554f98606e166f1c9f7dde5f33d84fce5d82fd14e930aeacab8e1624a13d720e4c997184d47b5964cfab717f4d18dc03  libasr-1.0.3.tar.gz
+sha512sums="93ff4643c46cccb36e4981336dde198975499c1e48df6ed0fa8e57628ea05a8dc1d5159fe9d0ee99ff2e7ab418aa346668749aca8be2f3346f07d884e4818368  libasr-1.0.4.tar.gz
 693c2bfce2ca9397909a281b3d634b37608ff6286a4e9b3c1d638a337c585d307db4a325fb8b607ef45399c1ee05063eda5eb46060d804e5b4ad51ca6890846d  0002-Replace-missing-res_randomid-with-the-more-secure-ar.patch"
