--- a/main/glfw/APKBUILD
+++ b/main/glfw/APKBUILD
@@ -1,31 +1,29 @@
 # Maintainer: Daniel Sabogal <dsabogalcc@gmail.com>
 pkgname=glfw
-pkgver=3.2.1
-pkgrel=3
+pkgver=3.3.2
+pkgrel=0
 pkgdesc="Multi-platform library for OpenGL and Vulkan application development"
 url="https://www.glfw.org/"
 arch="all"
-license="zlib"
+license="Zlib"
 depends_dev="libxinerama-dev linux-headers mesa-dev"
-makedepends="$depends_dev cmake libx11-dev libxcursor-dev libxrandr-dev"
+makedepends="$depends_dev cmake libx11-dev libxcursor-dev libxrandr-dev
+	libxi-dev"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/glfw/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/glfw/glfw/archive/$pkgver.tar.gz"
 
 
 build() {
-	cd "$builddir"
 	cmake . \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=ON
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir/" install
 }
 
-md5sums="91b8250b6edcc26c9f5205555070a504  glfw-3.2.1.tar.gz"
-sha256sums="e10f0de1384d75e6fc210c53e91843f6110d6c4f3afbfb588130713c2f9d8fe8  glfw-3.2.1.tar.gz"
-sha512sums="c7921f993b9a99b3b9421fefadb039cd475c42d85f5b5a35d7c5401c70491349bb885a02fd31e527de06a8b40d9d49a1fdb92c964e13c04ae092c6b98eb491dc  glfw-3.2.1.tar.gz"
+sha512sums="f5af749d33b5b900ccf07988ad0bf51bd766a18e4cf2bc2a76020c88e98a2528ff1b965224184fe0d290cfe34b1af1e6f633600660d81194fe354078e2f35c56  glfw-3.3.2.tar.gz"
