main/subunit: switch to python3

--- a/main/subunit/APKBUILD
+++ b/main/subunit/APKBUILD
@@ -2,26 +2,23 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=subunit
 pkgver=1.2.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A streaming protocol for test results"
 options="!check" # Dependencies for checking stuff are in testing/
 url="https://launchpad.net/subunit"
 arch="all"
 license="Apache-2.0 BSD-3-Clause"
-depends="python2"
-makedepends="check-dev cppunit-dev perl-dev python2-dev"
+depends="python3 py3-extras py3-testtools"
+makedepends="check-dev cppunit-dev perl-dev python3-dev"
 #checkdepends="py-testtools py-fixtures py-hypothesis py-testscenarios bash"
 subpackages="$pkgname-dev $pkgname-libs"
 source="https://launchpad.net/subunit/trunk/${pkgver%.[0-9]}/+download/subunit-$pkgver.tar.gz"
-builddir="$srcdir"/subunit-$pkgver
 
 prepare() {
-	cd "$builddir"
 	update_config_sub
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -34,14 +31,13 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
+	rm -f "$pkgdir"/usr/lib/*.a
 }
 
 sha512sums="f6559fd771ad0732985230d11a9a8326ef35c817b62d1f50dc332f0032f7b08559a46d2534983b7d3964e45682ac49b3e348581ee0983861390abcd4ec20459c  subunit-1.2.0.tar.gz"
