main/lighttpd: disable gamin support
- Requires python2

--- a/main/lighttpd/APKBUILD
+++ b/main/lighttpd/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=lighttpd
 pkgver=1.4.54
-pkgrel=0
+pkgrel=1
 pkgdesc="Secure, fast, compliant and very flexible web-server"
 url="https://www.lighttpd.net"
 arch="all"
@@ -11,11 +11,10 @@ install="$pkgname.pre-install $pkgname.pre-upgrade"
 pkgusers="lighttpd"
 pkggroups="lighttpd"
 makedepends="flex pcre-dev openssl-dev zlib-dev bzip2-dev lua5.3-dev
-	automake autoconf openldap-dev libxml2-dev sqlite-dev libev-dev
-	gamin-dev"
+	automake autoconf openldap-dev libxml2-dev sqlite-dev libev-dev"
 subpackages="$pkgname-doc $pkgname-dbg $pkgname-openrc $pkgname-mod_auth
 	$pkgname-mod_webdav"
-source="https://download.lighttpd.net/lighttpd/releases-1.4.x/$pkgname-$pkgver.tar.xz
+source="https://download.lighttpd.net/lighttpd/releases-1.4.x/lighttpd-$pkgver.tar.xz
 	$pkgname.initd
 	$pkgname.confd
 	$pkgname.logrotate
@@ -26,8 +25,6 @@ source="https://download.lighttpd.net/lighttpd/releases-1.4.x/$pkgname-$pkgver.t
 	mod_fastcgi_fpm.conf"
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -37,7 +34,6 @@ build() {
 		--libdir=/usr/lib/lighttpd \
 		--without-mysql \
 		--without-attr \
-		--with-fam \
 		--with-webdav-props \
 		--with-webdav-locks \
 		--without-gdbm \
@@ -50,13 +46,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 
 	# create dirs
