--- a/main/jbig2dec/APKBUILD
+++ b/main/jbig2dec/APKBUILD
@@ -5,24 +5,21 @@ pkgver=0.17
 _gsver="gs950"
 pkgrel=0
 pkgdesc="JBIG2 image compression format decoder"
+options="!check" # Tests require python2
 url="https://jbig2dec.com/"
 arch="all"
 license="GPL-2.0-or-later"
 makedepends="autoconf automake libtool"
-checkdepends="python2"
 subpackages="$pkgname-dev $pkgname-doc"
 source="https://github.com/ArtifexSoftware/ghostpdl-downloads/releases/download/$_gsver/jbig2dec-$pkgver.tar.gz"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	default_prepare
-	cd "$builddir"
 	autoreconf -vif
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -35,13 +32,7 @@ build() {
 	make
 }
 
-check() {
-	cd "$builddir"
-	make check
-}
-
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
