community/vault: build with python3

--- a/community/vault/APKBUILD
+++ b/community/vault/APKBUILD
@@ -7,13 +7,13 @@ pkgdesc="Vault is a tool for securely accessing secrets"
 url="https://www.vaultproject.io/"
 arch="all !s390x"
 license="MPL-2.0"
-makedepends="libcap bash make go python2 go-bindata-assetfs"
+makedepends="libcap bash make go python3 go-bindata-assetfs"
 install="$pkgname.pre-install"
 pkgusers="vault"
 pkggroups="vault"
 subpackages="$pkgname-openrc"
 options="!check"
-source="$pkgname-$pkgver.tar.gz::https://github.com/hashicorp/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/hashicorp/vault/archive/v$pkgver.tar.gz
 	go-mod-thrift.patch
 	static-assets.patch
 	vault.confd
