community/firefox-esr: fix install location of icons
We accidentally used $png instead of $_png in a loop so we didn't install
all the icons in the right location. Also fix the other linter warnings
while we're at it and use the upstream symlink for /usr/bin/firefox
since that appears to be working now.

--- a/community/firefox-esr/APKBUILD
+++ b/community/firefox-esr/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=firefox-esr
 pkgver=68.4.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Firefox web browser - Extended Support Release"
 url="https://www.mozilla.org/en-US/firefox/organizations/"
 arch="all !s390x !armhf" # limited by rust and cargo on s390x, fails to build on armhf
@@ -49,7 +49,7 @@ makedepends="
 	python2
 	"
 
-source="https://ftp.mozilla.org/pub/firefox/releases/${pkgver}esr/source/firefox-"$pkgver"esr.source.tar.xz
+source="https://ftp.mozilla.org/pub/firefox/releases/${pkgver}esr/source/firefox-${pkgver}esr.source.tar.xz
 	stab.h
 
 	fix-fortify-system-wrappers.patch
@@ -68,7 +68,7 @@ source="https://ftp.mozilla.org/pub/firefox/releases/${pkgver}esr/source/firefox
 	firefox.desktop
 	firefox-safe.desktop"
 
-builddir="${srcdir}/firefox-$pkgver"
+builddir="$srcdir/firefox-$pkgver"
 _mozappdir=/usr/lib/firefox
 
 # help our shared-object scanner to find the libs
@@ -193,7 +193,7 @@ build() {
 	export CXXFLAGS="-fno-delete-null-pointer-checks -fno-schedule-insns2"
 
 	# set rpath so linker finds the libs
-	export LDFLAGS="$LDFLAGS -Wl,-rpath,${_mozappdir}"
+	export LDFLAGS="$LDFLAGS -Wl,-rpath,$_mozappdir"
 
 	case "$CARCH" in
 		x86)
@@ -286,30 +286,20 @@ package() {
 		DESTDIR="$pkgdir" \
 		MOZ_MAKE_FLAGS="$MAKEOPTS"
 
-	install -m755 -d ${pkgdir}/usr/share/applications
-	install -m755 -d ${pkgdir}/usr/share/pixmaps
+	install -m755 -d "$pkgdir"/usr/share/applications
+	install -m755 -d "$pkgdir"/usr/share/pixmaps
 
-	local png
-	for png in ../browser/branding/official/default*.png; do
+	local _png
+	for _png in ../browser/branding/official/default*.png; do
 		local i=${_png%.png}
 		i=${i##*/default}
-		install -D -m644 "$png" "$pkgdir"/usr/share/icons/hicolor/${i}x${i}/apps/firefox.png
+		install -D -m644 "$_png" "$pkgdir"/usr/share/icons/hicolor/"$i"x"$i"/apps/firefox.png
 	done
 
 	install -m644 "$builddir"/browser/branding/official/default48.png \
-		${pkgdir}/usr/share/pixmaps/firefox.png
-	install -m644 ${srcdir}/firefox.desktop ${pkgdir}/usr/share/applications/firefox.desktop
-	install -m644 ${srcdir}/firefox-safe.desktop ${pkgdir}/usr/share/applications/firefox-safe.desktop
-
-	# launcher as symlink is broken from firefox-7.0
-	rm "$pkgdir"/usr/bin/firefox
-	libgl=$(scanelf -qF '#F%S' /usr/lib/libGL.so)
-	cat > "$pkgdir"/usr/bin/firefox << __EOF__
-#!/bin/sh
-
-exec $_mozappdir/firefox "\$@"
-__EOF__
-	chmod 755 "$pkgdir"/usr/bin/firefox
+		"$pkgdir"/usr/share/pixmaps/firefox.png
+	install -m644 "$srcdir"/firefox.desktop "$pkgdir"/usr/share/applications/firefox.desktop
+	install -m644 "$srcdir"/firefox-safe.desktop "$pkgdir"/usr/share/applications/firefox-safe.desktop
 
 	# install our vendor prefs
 	install -d "$pkgdir"/$_mozappdir/browser/defaults/preferences
@@ -325,11 +315,6 @@ __EOF__
 	pref("extensions.autoDisableScopes", 11);
 	pref("extensions.shownSelectionUI", true);
 	EOF
-
-	# remove copied, huge, libraries
-	rm -f "$pkgdir"/${_mozappdirdev}/sdk/lib/libmozjs.so
-	rm -f "$pkgdir"/${_mozappdirdev}/sdk/lib/libmozalloc.so
-	rm -f "$pkgdir"/${_mozappdirdev}/sdk/lib/libxul.so
 }
 
 sha512sums="e13bb141ad1c138cd9d8dd5d6996224ebe146ce08f0ad9cd37a20a85e8cd33db14e6bf1ab055aab7d3ae6f204ed2cb1ee02d5e6fb3d94778098156e1a46b7d6c  firefox-68.4.2esr.source.tar.xz
