--- a/main/bash-completion/APKBUILD
+++ b/main/bash-completion/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Kiyoshi Aman <kiyoshi.aman@gmail.com>
 # Maintainer: Lucas Ramage <ramage.lucas@openmailbox.org>
 pkgname=bash-completion
-pkgver=2.9
+pkgver=2.10
 pkgrel=0
 pkgdesc="Command-line tab-completion for bash"
 options="!check" # 7 Tests fail
@@ -13,12 +13,7 @@ depends="bash"
 makedepends="autoconf automake bc grep iputils musl-utils procps psmisc sed usbutils"
 checkdepends="py3-pexpect py3-pytest"
 subpackages="$pkgname-doc"
-source="https://github.com/scop/${pkgname}/releases/download/${pkgver}/${pkgname}-${pkgver}.tar.xz
-	01-generalized-containers.patch
-	02-skip-getconf-test.patch
-	03-skip-iconv-test.patch
-	04-fix-ifupdown.patch
-	05-fix-arp-test.patch"
+source="https://github.com/scop/bash-completion/releases/download/$pkgver/bash-completion-$pkgver.tar.xz"
 builddir="$srcdir"/$pkgname-$pkgver
 
 # Provided with util-linux and networkmanager:
@@ -45,18 +40,14 @@ _conflicting="
 
 prepare() {
 	cd "$builddir"
-	for i in $source; do
-		case $i in
-			*.patch) msg $i; patch -p1 -i "$srcdir/$i" || return 1;;
-		esac
-	done
+	default_prepare
 
 	# ifup/down tests are still failing
 	rm $builddir/test/t/test_ifdown.py
 	rm $builddir/test/t/test_ifup.py
-	sed -i '/test_ifdown.py \\/d' $builddir/test/t/Makefile.am || return 1;
-	sed -i '/test_ifup.py \\/d' $builddir/test/t/Makefile.am || return 1;
-	autoreconf -fiv || return 1;
+	sed -i '/test_ifdown.py \\/d' $builddir/test/t/Makefile.am
+	sed -i '/test_ifup.py \\/d' $builddir/test/t/Makefile.am
+	autoreconf -fiv
 }
 
 build() {
@@ -74,7 +65,7 @@ build() {
 check() {
 	cd "$builddir"
 	mkdir ./bin
-	ln -sf "$(which pytest-3)" ./bin/pytest
+	ln -sf "$(command -v pytest-3)" ./bin/pytest
 	export PATH="${PATH}:$PWD/bin"
 	make check
 }
@@ -93,9 +84,4 @@ package() {
 	done
 }
 
-sha512sums="e864091196d670699bdb2af3fc40464788e79c932fa564afa7ba34a637aa1583db7dbceab0e7ba6718fac99e9fd2dfb03d1ee51d7cf279d925ad63f60401d7d5  bash-completion-2.9.tar.xz
-1f7466e7bbc2eea30e75e3dd10819289f1586c2ba9b2a2f5199e4e8af99ed4ec081638e8c8efc6aefd8a8336cb67527b4152c2cd89620b173dfed798268c686c  01-generalized-containers.patch
-540cdc655911912475a48a191061f7a94a550d94ac750b601dc8a21e72ef469890b6416cee8fcb677cdb51b21b6f54742a0dc954b0cea5bc4d0b4adf8af86ec6  02-skip-getconf-test.patch
-a8d145f8b38ed9422426696e2204167e6dacfb03dec09dc7c23e83c9a6295524a9f93be6ac10e0e4a5ca079965dfe542bca11aae392248c7e21c6855a4543d64  03-skip-iconv-test.patch
-97de46d137b6f6b54891a13f8308928854e1bdc33e35808e1aa760514c9d3dbb87bcf2a08db72dc941e68bc3af7a106a81e7159e452823dc07f874d3b8e27b77  04-fix-ifupdown.patch
-262f7b6c654d8be95930c6230b4b9d1add344ef1a60f0c6c81cf46bb104dab3814a96e0fb92e99449cbd086a53ec1169e1db21b45436007710952004895e7a3f  05-fix-arp-test.patch"
+sha512sums="d434e0e48b25328e8c6b43ed64e58f56459186434754ee972795edd031ce1864038b53926b218fe06e5b3882682db4dec5101b3124362c0137101d3fa6d87cd7  bash-completion-2.10.tar.xz"
