--- a/main/boost/APKBUILD
+++ b/main/boost/APKBUILD
@@ -2,14 +2,14 @@
 pkgname=boost
 pkgver=1.72.0
 _pkgver="${pkgver//./_}"
-pkgrel=1
+pkgrel=2
 pkgdesc="Free peer-reviewed portable C++ source libraries"
 url="http://www.boost.org/"
 arch="all"
 license="custom"
 depends="$pkgname-libs"
 depends_dev="$pkgname linux-headers"
-makedepends="$depends_dev python2-dev>=2.6 python3-dev>=3.8 flex bison bzip2-dev icu-dev xz-dev zlib-dev"
+makedepends="$depends_dev python2 python3-dev>=3.8 flex bison bzip2-dev icu-dev xz-dev zlib-dev"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://dl.bintray.com/boostorg/release/$pkgver/source/boost_$_pkgver.tar.bz2
 	boost-1.57.0-python-abi_letters.patch
@@ -41,7 +41,6 @@ _libs="
 	prg_exec_monitor
 	program_options
 	python3
-	python2
 	random
 	regex
 	serialization
@@ -61,7 +60,6 @@ done; unset -v _lib
 subpackages="$subpackages $pkgname-libs"
 
 _set_options() {
-	[ -n "$PY2_VERSION" ] || PY2_VERSION="$(_pyversion python2)"
 	[ -n "$PY3_VERSION" ] || PY3_VERSION="$(_pyversion python3)"
 
 	local _options_python="${PY2_VERSION:+$PY2_VERSION,}$PY3_VERSION"
@@ -95,7 +93,6 @@ prepare() {
 	cat > user-config.jam <<-__EOF__
 
 	using gcc : : $CC : <cxxflags>"$CXXFLAGS" <linkflags>"$LDFLAGS" ;
-	using python : ${PY2_VERSION:+$PY2_VERSION }: /usr/bin/python2 : ${PY2_VERSION:+/usr/include/python${PY2_VERSION} }: : : : ;
 	using python : ${PY3_VERSION:+$PY3_VERSION }: /usr/bin/python3 : ${PY3_VERSION:+/usr/include/python${PY3_VERSION}${abiflags} }: : : : ${abiflags:+$abiflags };
 
 	__EOF__
