main/samurai: install ninja symlink, add provides/replaces

--- a/main/samurai/APKBUILD
+++ b/main/samurai/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=samurai
 pkgver=1.0
-pkgrel=0
+pkgrel=1
 pkgdesc="ninja-compatible build tool written in C"
 url="https://github.com/michaelforney/samurai"
 arch="all"
@@ -13,13 +13,12 @@ source="https://github.com/michaelforney/samurai/releases/download/$pkgver/$pkgn
 builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	make
 }
 
 package() {
-	cd "$builddir"
 	make install PREFIX="/usr" DESTDIR="$pkgdir"
+	ln -s samu "$pkgdir"/usr/bin/ninja
 }
 
 sha512sums="87b2a11a39dc36f3582abdc7c9d358c8fce241fe4155b5177d3e8588d1c040a62eb9daafd2365febbfadd6fcc27a3ceacf6f29ca6f871c822aad6f4bad527a51  samurai-1.0.tar.gz"
