main/samurai: actually add the provides/replaces

--- a/main/samurai/APKBUILD
+++ b/main/samurai/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=samurai
 pkgver=1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="ninja-compatible build tool written in C"
 url="https://github.com/michaelforney/samurai"
 arch="all"
@@ -11,6 +11,8 @@ options="!check"  # No test suite.
 subpackages="$pkgname-doc"
 source="https://github.com/michaelforney/samurai/releases/download/$pkgver/$pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-$pkgver"
+provides="ninja"
+replaces="ninja"
 
 build() {
 	make
