--- a/testing/setserial/APKBUILD
+++ b/testing/setserial/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="tool for change various attributes of a serial device"
 url="http://setserial.sourceforge.net/"
 arch="all"
 license="GPL-2.0-only"
-makedepends="groff"
+makedepends="groff linux-headers"
 subpackages="$pkgname-doc"
 source="http://downloads.sourceforge.net/sourceforge/setserial/setserial-$pkgver.tar.gz
 	ioctls.patch
