--- a/community/mongo-c-driver/APKBUILD
+++ b/community/mongo-c-driver/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=mongo-c-driver
-pkgver=1.15.1
+pkgver=1.16.0
 pkgrel=0
 pkgdesc="Client library written in C for MongoDB"
 url="https://github.com/mongodb/mongo-c-driver"
@@ -112,6 +112,7 @@ _dev() {
 
 	# libbson cmake file
 	mkdir -p "$pkgdir"/usr/lib/cmake
+	mv "$subpkgdir"/usr/lib/cmake/bson-1.0 "$pkgdir"/usr/lib/cmake
 	mv "$subpkgdir"/usr/lib/cmake/libbson-1.0 "$pkgdir"/usr/lib/cmake
 
 	# libbson include files
@@ -119,4 +120,4 @@ _dev() {
 	mv "$subpkgdir"/usr/include/libbson-1.0 "$pkgdir"/usr/include
 }
 
-sha512sums="7544900809dd008da110b412acc1e5e42ea908d804fdf3bced8100e48f1695844605407c9733b285b8833b636bcaec8687df25a01c9749612c61df2325214fe5  mongo-c-driver-1.15.1.tar.gz"
+sha512sums="eed1b4ac769f240f652616b9c27a101027217db25ef2674d61601a52bcbe8cf3799973cbb1d24b4a6f8b6fefb15086ec7a3b3984796e649d360682b6ccad0e15  mongo-c-driver-1.16.0.tar.gz"
