--- a/community/perl-xml-libxml-simple/APKBUILD
+++ b/community/perl-xml-libxml-simple/APKBUILD
@@ -3,43 +3,37 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-xml-libxml-simple
 _pkgreal=XML-LibXML-Simple
-pkgver=0.99
+pkgver=1.01
 pkgrel=0
 pkgdesc="XML::LibXML based XML::Simple clone"
-url="http://search.cpan.org/dist/XML-LibXML-Simple/"
+url="https://metacpan.org/release/XML-LibXML-Simple"
 arch="noarch"
-license="GPL PerlArtistic"
-cpandepends="perl-file-slurp-tiny perl-xml-libxml"
-cpanmakedepends="   "
-depends="$cpandepends"
-makedepends="perl-dev $cpanmakedepends"
+license="GPL-1.0-or-later OR Artistic-1.0-Perl"
+depends="perl-file-slurp-tiny perl-xml-libxml"
+makedepends="perl-dev"
 subpackages="$pkgname-doc"
-source="http://search.cpan.org/CPAN/authors/id/M/MA/MARKOV/$_pkgreal-$pkgver.tar.gz"
+source="https://cpan.metacpan.org/authors/id/M/MA/MARKOV/XML-LibXML-Simple-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
 
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
 }
 
 build() {
-	cd "$builddir"
 	export CFLAGS=$(perl -MConfig -E 'say $Config{ccflags}')
 	make
 }
 
 check() {
-        cd "$builddir"
-        make test
+	make test
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="806e039eefb447c43c747d1621bb432a3df13cb36798853ef2fe8a0ccaa1d7651d67fd6d386e19936100ffd4c04185004e5f0bb4ced66ed544efb6d6157b4e47  XML-LibXML-Simple-0.99.tar.gz"
+sha512sums="e0de7a3c70facbb1dd8bb9278b242eae5e390b6495e529d2b94fce620dadc8fb0ed773b0a4a2d4c7f99359bceca0cbac7316d9e412736bf54754b2602cee285c  XML-LibXML-Simple-1.01.tar.gz"
